--- a/.gitignore
+++ b/.gitignore
@@ -73,11 +73,12 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 .env.local
-client/.env
+client/.env.development
+client/.env.production
 server/.env
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -133,11 +134,6 @@ dist
 .yarn/cache
 .yarn/unplugged
 .yarn/build
-
-client/package-lock.json
-client/package.json
-package-lock.json
-package.json
 
 Dockerfile
 .dockerignore
