--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,11 @@
     "allowedHosts": [
       "localhost",
       ".localhost"
-    ],
-    "proxy": "https://localhost:4000"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.15",
@@ -19,11 +18,12 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/lab": "^6.0.0-beta.29",
-    "@mui/material": "^6.4.0",
-    "@mui/x-data-grid": "^7.24.0",
-    "@mui/x-date-pickers": "^7.27.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
+    "@mui/system": "^7.3.1",
+    "@mui/x-data-grid": "^8.10.0",
+    "@mui/x-date-pickers": "^8.10.0",
     "@nivo/bar": "^0.88.0",
     "@nivo/core": "^0.88.0",
     "@nivo/geo": "^0.88.0",
@@ -49,18 +49,19 @@
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.28.2",
-    "react-script": "^2.0.5",
-    "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deps:check": "npm outdated --long",
+    "deps:update": "npm update && npm dedupe",
+    "deps:bump": "npx npm-check-updates -u && npm i && npm dedupe",
+    "audit:prod": "npm audit --omit=dev --audit-level=high"
   },
   "eslintConfig": {
     "extends": [
@@ -79,5 +80,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-swc": "^4.0.0",
+    "npm-check-updates": "^18.0.2",
+    "vite": "^7.1.2"
   }
 }
