--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "concurrently": "^9.2.0",
     "cross-env": "^10.0.0",
     "nodemon": "^3.1.9",
